[workspace]
members = ["incro-bin", "macro-template", "macros/*"]

[workspace.dependencies]
evdev = { version = "0.12.1" }
anyhow = "1.0.75"
libloading = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
scopeguard = "1.2.0"
notify = "6.1.1"
path-absolutize = "3.1.1"

[package]
name = "incro"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = { workspace = true }
scopeguard = { workspace = true }